Add pagination links

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@ layout: default
     {% endfor %}
   </ul>
 
+  {% if paginator.previous_page %}
+  <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}">Previous Page</a>
+  {% endif %}
+
+  {% if paginator.next_page %}
+  <a href="{{ paginator.next_page_path | prepend: site.baseurl }}">Next Page</a>
+  {% endif %}
+
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
