--- a/index.html
+++ b/index.html
@@ -24,13 +24,20 @@ layout: default
     {% endfor %}
   </ul>
 
+<!-- Pagination links -->
+<div class="pagination">
   {% if paginator.previous_page %}
-  <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}">Previous Page</a>
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="previous">Previous</a>
+  {% else %}
+    <span class="previous">Previous</span>
   {% endif %}
-
+  | <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span> |
   {% if paginator.next_page %}
-  <a href="{{ paginator.next_page_path | prepend: site.baseurl }}">Next Page</a>
+    <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="next">Next</a>
+  {% else %}
+    <span class="next ">Next</span>
   {% endif %}
+</div>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
