deploy: 566df09403efdce6d75f3a4971aa5c121df68bda

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-mm-4e-zombie.png"/>
   <figcaption>
-    Definitely not a D&D illustration
+  Copyright 2008 Wizards of the Coast
   </figcaption>
 </figure>
 
