--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ is because Monk is a separate class in D&amp;D.</p>
 <p>And the reason Monk is a separate class in D&amp;D, as far as I can tell, is because
 of a particular set of media cliches that have surrounded the words “martial
 arts” in a lot of media contemporary with earlier editions of D&amp;D. I guess you
-could call it a form orientalism<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote">1</a></sup>.</p>
+could call it a form of orientalism<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote">1</a></sup>.</p>
 
 <p>In some of these media sources, “martial arts” are this mysterious and exotic
 secret from the mysterious and exotic East, much more sophisticated than the
