deploy: 6592f02a312636468c3f1460094bc23f0fcdedf9

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
   </figcaption>
 </figure>
 
-<p>This is part of a series! Go [here][1] to see the other entries.</p>
+<p>This is part of a series! Go <a href="/octopus-carnival/projects/mm2-4e/">here</a> to see the other entries.</p>
 
 <p>Adamantine dragons are the first metallics we’ll cover. I finally found a wiki
 with publication histories for monsters, so I can say that that they first
@@ -181,6 +181,7 @@ party composition in these terms, since they’re tacticians.</p>
 
 <p>The sample encounter is level 15, an adult adamantine dragon and 2 banshrae
 warriors.</p>
+
 
           </div>
         </article>
