--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ system, and it was vaguely inspired by the Agains the Giants modules for AD&amp;
 this writing I definitely don’t have the bandwidth for it, but I just thought it
 would be nice to write it down.</p>
 
-<h2 id="lancer-agains-the-giants">LANCER: Agains the Giants</h2>
+<h2 id="lancer-against-the-giants">LANCER: Against the Giants</h2>
 
 <p>Armies of Giants invade, out of nowhere and for seemingly no reason!</p>
 
