--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ feet in combat.</p>
 <p>The tusks are Reach 2 and can either <strong>gore</strong> as a basic attack or perform a
 <strong>Tusk Toss</strong> (recharge 4+) that targets Fortitude, does a little less damage
 and slides the target 5 squares. At the end of the slide the target falls from a
-height of 30 feed on the destination square, so it really is a toss. The fall
+height of 30 feet on the destination square, so it really is a toss. The fall
 does damage (and can be mitigated) according to the standard rules for falling.</p>
 
 <p>The feet can <strong>stamp</strong>, a Reach 1 attack that targets fortitude, does about same
