deploy: d640c30d2507faa1976d5d3b1788373b55be6d84

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
   </figcaption>
 </figure>
 
+<p>This post is part of a series! Go <a href="/octopus-carnival/projects/mm2-4e/">here</a> to see the other entries.</p>
+
 <p>Will-O’-Wisps in D&amp;D are inspired by folklore, and their legend is in turn
 inspired by the natural phenomena that make swamp gas glow at night. I think
 they’ve been in the game since AD&amp;D, though their exact lore might have changed
@@ -137,6 +139,7 @@ those dazed characters.</p>
 
 <p>Our sample encounter is level 9: two wisps and a quartet of spriggans (two
 powries, 2 thorns). Evil fairies all around.</p>
+
 
           </div>
         </article>
