deploy: 2aef9baad189a33253f20c7616eeba4d5f923a7b

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ in a book I don’t own.</p>
 <h2 id="the-lore">The Lore</h2>
 
 <p>Banderhobbs stuck in my memory as a notable monster when I first read this book,
-and now that I’m here again I can se why. They’re D&amp;D’s take on the Boogeyman,
+and now that I’m here again I can see why. They’re D&amp;D’s take on the Boogeyman,
 the monsters parents use to scare their children. Be good, or a banderhobb will
 come to you in your sleep and take you away.</p>
 
