deploy: 453fee52c981ecb0db2dced11c0d26f987d9bc58

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ PCs or with sympathetic NPCs.</p>
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click <a href="/octopus-carnival/projects/mm3-4e">here</a> to see the other.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/mm3-4e">here</a> to see the others.</p>
 
 <p>Thri-Kreen got famous as one of the playable options for AD&amp;D’s Dark Sun. This
 is their 4e debut. They would return as fully-supported playable characters in
