--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@ to help out fellow shadowrunners in need.</p>
 
 <p>In a GURPS Action or Cyberpunk campaign with supernatural elements, The
 Understanding is a -10-point Code of Honor, since it’s informal but applies to
-people who are not your peers. Give Goncharov his cut and use it to support your
-community and fellow runners; hunt down and punish any who betray them[^3];
-never sell out; even if you need to do a job for a corp or a crime syndicate,
-never forget they’re the enemy.</p>
+interactions with people who are not your peers. Give Goncharov his cut and use
+it to support your community and fellow runners; hunt down and punish any who
+betray them<sup id="fnref:3" role="doc-noteref"><a href="#fn:3" class="footnote" rel="footnote">3</a></sup>; never sell out; even if you need to do a job for a corp or a
+crime syndicate, never forget they’re the enemy.</p>
 
 <p>This code can work as a “pact” limitation for supernatural or cinematic traits
 related to being stealthy, discreet, or good at combat (yes, even Gunslinger or
@@ -385,9 +385,11 @@ mercenaries who think you’re weak for having a conscience.</p>
     </li>
     <li id="fn:2" role="doc-endnote">
       <p>Though I understand it was kinda moving in this direction in its latest
-editions.
-[^3]: Yes, you are totally following the code if you track Clockwork down and
-shoot him in the head after telling him “Goncharov says hi”. <a href="#fnref:2" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+editions. <a href="#fnref:2" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+    </li>
+    <li id="fn:3" role="doc-endnote">
+      <p>Yes, you are totally following the code if you track Clockwork down and
+shoot him in the head after telling him “Goncharov says hi”. <a href="#fnref:3" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
 </div>
