--- a/index.html
+++ b/index.html
@@ -373,10 +373,22 @@ crime syndicate, never forget they’re the enemy.</p>
 related to being stealthy, discreet, or good at combat (yes, even Gunslinger or
 a talent like Smooth Operator). It would provide a 10% discount on their price,
 as normal, and would make these abilities unavailable until atonement if the PC
-breaks the attached code. Goncharov’s cut is also 10%. Following the code might
-also lead to acquiring traits such as positive reputation among your community
-or fellow runners, or Enemies in the form of traitorous villains and amoral
-mercenaries who think you’re weak for having a conscience.</p>
+breaks the attached code.</p>
+
+<p>The monetary value of Goncharov’s cut is 10% of any earnings from
+“shadowrun”-like missions. GMs and players who don’t want to bother with
+accounting can just remove it from the PC when it’s given, and assume it gets
+spent properly. In games where more detailed tracking is important, the PC
+doesn’t need to spend the money immediately, just set it aside for use when
+necessary. Using it for personal benefit after it’s been set aside is a
+violation of the Code, though. If the protected community has its own
+organization stats, the player might want to consider transferring this money
+from the PC to the organization.</p>
+
+<p>Following the code might also lead to acquiring traits such as positive
+reputation among your community or fellow runners, or Enemies in the form of
+traitorous villains and amoral mercenaries who think you’re weak for having a
+conscience.</p>
 
 <div class="footnotes" role="doc-endnotes">
   <ol>
