deploy: 4708bc19011960c3fe2b3f3b00f6c6d940b0da9e

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the others.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/tnv/">here</a> to see the others.</p>
 
 <p>This our first example of a “concrete” dragon, where they take the generic
 information from the Monster Manuals and use it to make a specific atypical
@@ -265,6 +265,7 @@ deep into the Winterbole forest.</p>
 
 <p>Lore-wise, I like the dynamic of a somewhat stupid “queen” constantly
 manipulated by her much smarter vassals.</p>
+
 
           </div>
         </article>
