deploy: 8bd915ff55124467406c98d3094f7626b36b42af

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the others.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/tnv/">here</a> to see the others.</p>
 
 <p>The Gravelstokes are a new threat with very specific ties to the Nentir Vale
 setting. They also serve as a reminder that Nerath wasn’t all sunshine and
@@ -255,6 +255,7 @@ regaining their own prestige and wealth. That could happen in a reborn Nerath,
 or it could happen in an empire by any other name. So they might consider any of
 the “revivalist” factions as prospective clients or as deluded upstarts
 depending on how deep their purses are.</p>
+
 
           </div>
         </article>
