deploy: e689515dc1373ed9efe5835c2c4f9fdbee0d1f1e

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ article looks at one of its most important factions.</p>
 <h2 id="the-lore">The Lore</h2>
 
 <p>The Vale’s first elves came to live here shortly after their people split from
-the Eladrin, settling in the Harken Forest. A group of these elves grew
-fascinated with the primal power of the forest, and formed a group they called
-Harken’s Heart to worship and protect it.</p>
+the Eladrin, settling in the Harken Forest. Some of these elves grew fascinated
+with the primal power of the forest, and formed a group they called Harken’s
+Heart to worship and protect it.</p>
 
 <p>Harken’s Heart differs from a typical druidic circle in that they consider
 themselves to have a duty to <em>Harken Forest</em> as opposed to a more general duty
