--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@ if(!(window.doNotTrack === "1" || navigator.doNotTrack === "1" || navigator.doNo
 
 <p>This post is part of a series! Click <a href="/octopus-carnival/projects/tnv/">here</a> to see the others.</p>
 
-<p>This was the first time I saw these monsters, and they feel new.</p>
+<p>This was the first time I saw these monsters, but it looks like they first
+appeared in Heart of Nightfang Spire, one of the modules in the official Third
+Edition adventure path.</p>
 
 <h2 id="the-lore">The Lore</h2>
 
