deploy: 0eceba771ad16ae7c473500fd49e8272a54a0071

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@ calculated to confuse players. Things that are good against devils are bad
 against demons and vice-versa - if the PCs guess wrong, they’re in trouble. The
 specifics here change from edition to edition.</p>
 
-<p>Lore-wise, early editions made it the fact that devils were Lawful Evil and
-demons Chaotic Evil a big deal, and later ones tried to elaborate on it and find
-more ways to explain that the two alignments were different at a fundamental
-cosmic level. Pathfinder really doubles down on that, trying to find additional
-themes for every fiend type it presents.</p>
+<p>Lore-wise, early editions made a big deal out of the fact that devils were
+Lawful Evil and demons Chaotic Evil. Later ones tried to elaborate on it and
+find more ways to explain that the two alignments were different at a
+fundamental cosmic level. Pathfinder really doubles down on that, trying to find
+additional themes for every fiend type it presents.</p>
 
 <p>Pathfinder 1e, which is what we’re interested in, has this configuration for the
 mechanical bits:</p>
