--- a/projects/index.html
+++ b/projects/index.html
@@ -64,7 +64,7 @@ for ease of reference.</p>
 <p>Adaptations of settings from video games or other sources into GURPS:</p>
 
 <ul>
-  <li><a href="https://bira.github.io/octopus-carnival/projects/dragons-dogma/">GURPS Dragon’s Dogma</a>: A complete adaptation of the eponymous video game
+  <li><a href="/octopus-carnival/projects/dragons-dogma/">GURPS Dragon’s Dogma</a>: A complete adaptation of the eponymous video game
 into a GURPS setting appropriate for Dungeon Fantasy campaigns.</li>
 </ul>
 
@@ -73,7 +73,7 @@ into a GURPS setting appropriate for Dungeon Fantasy campaigns.</li>
 <p>In which I tell you about games I GMed.</p>
 
 <ul>
-  <li><a href="https://bira.github.io/octopus-carnival/projects/gurps-xcom-reports/">GURPS X-COM Play Reports</a>: A retelling of a campaign I ran for
+  <li><a href="/octopus-carnival/projects/gurps-xcom-reports/">GURPS X-COM Play Reports</a>: A retelling of a campaign I ran for
 about a year on the RPG.net forum.</li>
 </ul>
 
@@ -101,13 +101,18 @@ reading, I move on to the MM2.</p>
     <p><a href="/octopus-carnival/projects/tnv/">Let’s Read Threats to the Nentir Vale</a>: This is the last “proper” monster
 book published for 4e, and the last one I intend to cover for now.</p>
   </li>
+  <li>
+    <p><a href="/octopus-carnival/projects/neverwinter/">Let’s Read the Neverwinter Campaign Setting!</a>: By popular demand, I began
+a Let’s Read of the Neverwinter Campaign setting, the last “proper” setting
+for 4e and one that has quite a few interesting traits.</p>
+  </li>
 </ul>
 
 <h2 id="ready-to-play-characters">Ready-to-Play Characters</h2>
 
 <ul>
   <li>
-    <p><a href="https://bira.github.io/octopus-carnival/projects/pathfinder-iconics/">Pathfinder Iconics in Dungeon Fantasy</a>: A group of Pathfinder’s Iconics
+    <p><a href="/octopus-carnival/projects/pathfinder-iconics/">Pathfinder Iconics in Dungeon Fantasy</a>: A group of Pathfinder’s Iconics
 converted into immediately playable Dungeon Fantasy characters.</p>
   </li>
   <li>
