deploy: fca572f20d5308e4580119ebbce4c3c4c5a3bbde

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ imported directly from Warframe. It’s easily usable in other systems, though.<
 
 <figure class="left">
   <img src="https://bira.github.io/octopus-carnival/assets/CorpusDatamass.webp" width=200/>
+  <figcaption>A datamass.</figcaption>
 </figure>
 
 <p>A <strong>datamass</strong> is a device similar in concept to the causality communicator in
