deploy: 71be78ef37bfcced3979a7d3d4e5899745a16ed5

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <figure class="center">
    <img src="https://bira.github.io/octopus-carnival/assets/cp2020-cover.jpg"/>
    <figcaption>
-     Our target system
+     I used to think this guy on the cover was so cool.
    </figcaption>
 </figure>
 
