deploy: 88114f6369852c2cd3956cbcca91ee11d1d3d9bd

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ start the actual run.</p>
 <h2 id="run-summary">Run Summary</h2>
 
 <p>G0blin Jr. goes in with the physical team, they get past the reception, and as
-the rest of the team locks herself in the bathroom to try and hack the security
-server.</p>
+the rest of the team pretends to work she locks herself in the bathroom to try
+and hack the security server.</p>
 
 <p>We are cheating a bit here, because it turns out you need to be within six
 meters <em>and</em> within line of sight of an access point to hack the corresponding
@@ -195,9 +195,9 @@ lot of pain) if she does.</p>
 
 <p>29 minutes is well within our tolerance for a manageable amount of time, so we
 can say that CP RED’s system remains fast. It took around 12 minutes for Junior
-to disable the camera and alarm, which is about what I consider the top limit
-for the rest of the team to be kept waiting. You could cut to the physical team
-at that time and go turn by turn to keep everyone moving.</p>
+to disable the camera and alarm, which is about what I consider the upper limit
+on the time you can keep the rest of the team waiting. You could cut to the
+physical team at that time and go turn by turn to keep everyone moving.</p>
 
 <p>Disabling the door has to happen in the same hack because the system resets when
 the netrunner jacks out, but that’s an additional 7 minutes so it’s OK. The
