deploy: 4429ead05e2aed03ea686afdf5a6e84953e02459

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <figure class="center">
    <img src="https://bira.github.io/octopus-carnival/assets/firefox-logo.png"/>
    <figcaption>
-     Shadowrun 20th Anniversary's cover.
+   The Firefox logo.
    </figcaption>
 </figure>
 
