deploy: 23013cdf6647640f7e617ae12abca629b62846b3

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ right, but they only have to do that once. <a href="#fnref:2" class="reversefoo
             <figure class="center">
    <img src="https://bira.github.io/octopus-carnival/assets/nco-cover.png"/>
    <figcaption>
-     Shadowrun 20th Anniversary's cover.
+     Neon City Overdrive's cover.
    </figcaption>
 </figure>
 
@@ -776,7 +776,7 @@ Neverwinter.</p>
             <figure class="center">
    <img src="https://bira.github.io/octopus-carnival/assets/sr5-cover.png"/>
    <figcaption>
-     Shadowrun 20th Anniversary's cover.
+     Shadowrun 5th Edition's cover.
    </figcaption>
 </figure>
 
