--- a/page2/index.html
+++ b/page2/index.html
@@ -66,7 +66,7 @@
             <figure class="center">
    <img src="https://bira.github.io/octopus-carnival/assets/sr5-cover.png"/>
    <figcaption>
-     Shadowrun 20th Anniversary's cover.
+    Shadowrun 5th Edition's cover.
    </figcaption>
 </figure>
 
