deploy: 4a556a077dcaf5effb33242efa329e48de7ae21d

--- a/page2/index.html
+++ b/page2/index.html
@@ -624,13 +624,13 @@ access to the files.</p>
 
 <p>With all this in place, we’ll see how our decker does next post.</p>
 
-<p>omnipotent organizations that stand ever ready to squash players, and I guess
-GOD made it in either because of their demands or because some of SR5’s writers
-were ascended GMs themselves.</p>
 <div class="footnotes" role="doc-endnotes">
   <ol>
     <li id="fn:1" role="doc-endnote">
-      <p>Petty rant time: Many Shadowrun GMs love the idea of omniscient and <a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>Petty rant time: Many Shadowrun GMs love the idea of omniscient and
+omnipotent organizations that stand ever ready to squash players, and I
+guess GOD made it in either because of their demands or because some of
+SR5’s writers were ascended GMs themselves. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
 </div>
