deploy: eadef5af857f8d415640eea517bb8d712216a2a8

--- a/page128/index.html
+++ b/page128/index.html
@@ -335,10 +335,15 @@ practically mandates Chaotic and/or Good alignments.</p>
 
 <h2 id="-and-now-some-adventure-background">… And Now Some Adventure Background.</h2>
 
-<p>The backstory here is that recent victories by a rebel army calling themselves
-the Glorious Reclamation have caused the Chelish government to crack down hard
-on any form of dissent. Though Kintargo has no direct ties to the Reclamation,
-it’s still getting a dose of martial law.</p>
+<p>Kintargo and its surrounding province of Ravounel are located in Cheliax’s
+northern border and separated from the Chelish heartland by an imposing mountain
+chain. They took much longer for house Thrune to annex than the rest of the
+kingdom and remained somewhat rebellious and unruly even after that.</p>
+
+<p>Just before the start of the campaign, recent victories in the heartland by a
+rebel army calling themselves the Glorious Reclamation have caused the Chelish
+government to crack down hard on any form of dissent. Though Kintargo has no
+direct ties to the Reclamation, it’s still getting a dose of martial law.</p>
 
 <p>This bitter pill comes in the form of Paracount Barzilai <del>J.</del> Thrune, a man so
 evil even his family of diabolist despots thinks he’s an asshole. He’s both a
@@ -348,14 +353,18 @@ through the ranks in either one requires dropping the other, and if there is one
 thing Barzilai <del>J.</del> Thrune doesn’t like to do is divest himself from his
 conflicting interests. Recently however, he made a deal with Mephistopheles to
 learn an unholy ritual that will make him immortal. This ritual must be
-performed at a certain place beneath Kintargo. So he accepts the post of Lord
-Mayor there, secretly kills anyone who could oppose him before officially taking
-office, and begins his reign of petty oppression.</p>
+performed at a certain place beneath Kintargo, and will slowly turn him into a
+genius loci, a powerful “spirit of place” eternally bound to Kintargo and
+Ravounel. So he volunteers to become the city’s new Lord Mayor, secretly kills
+anyone who could oppose him before officially taking office, and begins his
+reign of petty oppression.</p>
 
 <p>With his ritual being the fruit of a devil’s bargain and all, it will only
 complete successfully if The Barzilai dies a natural death while near the site
 where it was performed, which means he has to live out his days in peace. If
-he’s killed before his time, he goes to Hell for an eternity of torment.</p>
+he’s killed before his time, he goes to Hell to be tormented until the
+transformation completes. This is a process that takes a long time, and can be
+stopped by exploiting the right loopholes in his infernal contract.</p>
 
 <p>The adventure begins just as Thrune’s reign gets seriously bad, a time also
 known as “week 2”. It expects the PCs to form and lead a resistance movement
