--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-dscc-baazrag.jpeg"/>
   <figcaption>
-    An typical anakore specimen, looking like a gray spiky armadillo man with
-    large claws. Copyright 2010 Wizards of the Coast.
+    A pack of baazrags ready to attack. Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
 
