deploy: 48555addb5f4aacd5d1fe23b3866e6d84601f81f

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the rest.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/dscc/">here</a> to see the rest.</p>
 
 <h2 id="the-lore">The Lore</h2>
 
@@ -178,6 +178,7 @@ deals ongoing psychic damage (save ends both).</p>
 impressions, braxats seem to be some of the worst people in Athas, and that’s
 saying something. They feel like Darker and Sunnier evil ogres or giants. The
 three variants slot neatly into the ogre/giant/titan role, respectively.</p>
+
 
           </div>
         </article>
