--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the rest.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/dscc/">here</a> to see the rest.</p>
 
 <h2 id="the-lore">The Lore</h2>
 
@@ -202,6 +202,7 @@ simple-minded, and how it manages to make them superstitious despite living in a
 D&amp;D world and having their own working magical tradition. Distrusting arcane
 magic in Dark Sun is sensible, but having the brohgs do it because they falsely
 believe it’s a curse from evil spirits is a step too far in my opinion.</p>
+
 
           </div>
         </article>
