--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-dscc-cilops.jpeg"/>
   <figcaption>
-    A chathrang reeling in a small mammal it just caught.
+    A cilops, which is a giant centipede with one big angry eye on its head.
     Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
