--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-dscc-dagorran.jpg"/>
   <figcaption>
-    A cilops, which is a giant centipede with one big angry eye on its head.
+    A dagorran, which is a cross between a lizard and a large dog with wicked
+    sharp teeth.
     Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
