--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the rest.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/dscc/">here</a> to see the rest.</p>
 
 <h2 id="the-lore">The Lore</h2>
 
@@ -201,6 +201,7 @@ opportunistic flanking buddy that will help them get their initial combat
 advantage on a target. Other than that all of them have some interesting ways to
 punish PCs that do <em>too</em> well against them.</p>
 
+
           </div>
         </article>
       </li>
@@ -222,7 +223,7 @@ punish PCs that do <em>too</em> well against them.</p>
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the rest.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/dscc/">here</a> to see the rest.</p>
 
 <h2 id="the-lore">The Lore</h2>
 
@@ -358,6 +359,7 @@ tone I was going for might or might not be less prevalent in the setting.</p>
 when used together. As mentioned above, any brutes and soldiers who are part of
 an all-elven group will likely be trained war beasts instead of more elves.</p>
 
+
           </div>
         </article>
       </li>
@@ -379,7 +381,7 @@ an all-elven group will likely be trained war beasts instead of more elves.</p>
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the rest.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/dscc/">here</a> to see the rest.</p>
 
 <h2 id="the-lore">The Lore</h2>
 
@@ -497,6 +499,7 @@ everyone else is unaligned. And they’re all super tragic.</p>
 <p>I don’t think windwalkers would mix with other eladrin, though it’s easy
 enough to reskin a standard Mirage Adept as another windwalker variant if you
 want to mix them up. As noted above, this makes for a potent combination.</p>
+
 
           </div>
         </article>
