--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-dscc-hejkin.png"/>
   <figcaption>
-    A gith warrior with a spear.
+    A hejkin.
     Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
@@ -182,12 +182,12 @@ and Ankhegs are favorites.</p>
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-dscc-halfling.png"/>
   <figcaption>
-    A gith warrior with a spear.
+    A halfling.
     Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
 
-<p>This post is part of a series! Click [here][1] to see the rest.</p>
+<p>This post is part of a series! Click <a href="/octopus-carnival/projects/dscc/">here</a> to see the rest.</p>
 
 <h2 id="the-lore">The Lore</h2>
 
@@ -301,6 +301,7 @@ simple enough that you can adjust their level directly without having to make
 big changes to their abilities. Monster Manual halfling stats work well in
 conjunction with these, though I’d replace any slings with poison darts or the
 equivalent to keep the flavor.</p>
+
 
           </div>
         </article>
