deploy: a3865efaa77bcea111b7ce40cede954ba1139757

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@ and Ankhegs are favorites.</p>
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-dscc-halfling.png"/>
   <figcaption>
-    A halfling.
+    A halfling wielding a spear and wearing bone armor, sneaking through a
+    forest.
     Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
