deploy: f2f3eeb6e9352b98c8e5d5658827e0aaab58be3d

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <figure class="center">
   <img src="https://bira.github.io/octopus-carnival/assets/wir-dscc-kirre.png"/>
   <figcaption>
-    A kirre, looking like a horned green tiger with six legs.
+    A kirre, looking like a horned green tiger with eight legs.
     Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
