deploy: 86df5dc9263ec6902f9c532aff2da77237ac418c

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@ and other damp and dark places, like many dungeons.</p>
 in a specially built cage, using it for its original purpose when questioning
 suspects.</p>
 
+<p>Even if the victim manages to resist the mind reading attempt, the recap
+will still speak a bunch of unconnected nonsense words for a minute or so. Those
+who are mainly concerned about noise should refrain from touching them at all.</p>
+
 <h2 id="the-numbers">The Numbers</h2>
 
 <p>Recaps aren’t “monsters” in a literal sense. Despite their radio-announcer
@@ -115,18 +119,18 @@ cluster harmless for as long as it lasts.</p>
 <p><em>Save</em>: Quick Contest of <strong>Will</strong> against skill 16 to avoid having your mind
 read. <strong>Magic Resistance</strong> helps.</p>
 
-<p><em>Effect</em>: If the target won the contest of Will, this will be a string of
-nonsense words. If they lost, the recap will summarize the previous week of
-their lives as if it was the last episode of a radio serial, potentially airing
-some dirty laundry.</p>
+<p><em>Effect</em>: About a minute of loud noises. If the target won the contest of Will,
+this will be a string of nonsense words. If they lost, the recap will summarize
+the previous week of their lives as if it was the last episode of a radio
+serial, potentially airing some dirty laundry.</p>
 
 <p><em>Shots</em>: Constant.</p>
 
 <p><em>Rearm</em>: No.</p>
 
 <p><em>Steal</em>: Roll against <strong>Naturalist</strong> to harvest one large, healthy recap
-specimen per hex. This is worth $1000 if delivered intact to the right people
-back in town.</p>
+specimen per hex. This weights 1 lb. and is worth $1000 if delivered intact to
+the right people back in town.</p>
 
 <h3 id="recap-inquisitor">Recap Inquisitor</h3>
 
