deploy: 6b66e2ed4fadbf34ca1208109f49493b09ffb219

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ lives.</p>
 they do have a tendency to spill closely held secrets that are big sources of
 anxiety or regret for the victim. Some believe recaps they were originally
 developed by an underground civilization with a strong tradition in psionics to
-acts as interrogation tools. Nowadays you can find them in the wild inside caves
+act as interrogation tools. Nowadays you can find them in the wild inside caves
 and other damp and dark places, like many dungeons.</p>
 
 <p>At least one investigator on the surface is known to carry a potted recap around
@@ -149,6 +149,20 @@ gaps mean it doesn’t protect against thrusting ones.</p>
 
 <p>Recap Inquisitors cost $2000 and weight 10 lbs. Monthly maintenance requires
 $100 in supplies and success in a <strong>Naturalist</strong> roll to keep the ‘shroom alive.</p>
+
+<h2 id="additional-notes">Additional Notes</h2>
+
+<p>I put in the same resistance mechanics for the two entries but I think they’re
+mostly relevant for an interrogation scenario. When you step onto a recap patch
+in the wild it’s probably funnier if they just succeed and narrate your last
+week. It might even be fun to have the PC’s player do the narration if they’re
+so inclined.</p>
+
+<p>I say this because in my experience PCs rarely have something to hide from each
+other, so there wouldn’t be really any dirty laundry that they didn’t want
+aired. Of course, if you your group <em>is</em> a party of sneaky gits who do keep
+important secrets from each other, then you should probably keep the resistance
+test in place.</p>
 
           </div>
         </article>
